--- a/css/postApply-2.7.css
+++ b/css/postApply-2.7.css
@@ -211,7 +211,7 @@
 
 .select-input {
   display: inline-block;
-  width: 50px;
+  width: 5rem;
   height: 50px;
-  background-color: red;
+  line-height: 48px;
 }
